--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
-spring.cloud.config.server.git.uri=https://github.com/lokeshratnam09/PaybitoPro_ConfigServer.git
-spring.cloud.config.server.git.username=lokeshratnam09
-spring.cloud.config.server.git.password=lokesh@123LR
-spring.cloud.config.server.git.default-label=main
+spring.datasource.url= jdbc:oracle:thin:@10.0.1.93:1521:paybito
+spring.datasource.username=paybito_db
+spring.datasource.password=pAYb1t0$20#tRA11##2022$
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
