--- a/application.properties
+++ b/application.properties
@@ -2,3 +2,9 @@ spring.datasource.url= jdbc:oracle:thin:@10.0.1.93:1521:paybito
 spring.datasource.username=paybito_db
 spring.datasource.password=pAYb1t0$20#tRA11##2022$
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+#Eureka details
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+#InstanceId
+eureka.instance.instance-id=${spring.application.name}:${random.value}
