--- a/application.properties
+++ b/application.properties
@@ -8,3 +8,9 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 #InstanceId
 eureka.instance.instance-id=${spring.application.name}:${random.value}
+
+#Actuator enable
+management.endpoints.web.exposure.include=*
+
+#Admin server location
+spring.boot.admin.client.url=http://localhost:9080
