--- a/application.properties
+++ b/application.properties
@@ -4,7 +4,8 @@ spring.datasource.password=pAYb1t0$20#tRA11##2022$
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 #Eureka details
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://54.177.177.158:8761/eureka
 
 #InstanceId
 eureka.instance.instance-id=${spring.application.name}:${random.value}
