--- a/application.properties
+++ b/application.properties
@@ -14,4 +14,5 @@ eureka.instance.instance-id=${spring.application.name}:${random.value}
 management.endpoints.web.exposure.include=*
 
 #Admin server location
-spring.boot.admin.client.url=http://localhost:9080
+#spring.boot.admin.client.url=http://localhost:9080
+spring.boot.admin.client.url=http://54.177.177.158:9089
