--- a/application.properties
+++ b/application.properties
@@ -4,8 +4,8 @@ spring.datasource.password=pAYb1t0$20#tRA11##2022$
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 #Eureka details
-#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.client.service-url.defaultZone=http://54.177.177.158:8761/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#eureka.client.service-url.defaultZone=http://54.177.177.158:8761/eureka
 
 #InstanceId
 eureka.instance.instance-id=${spring.application.name}:${random.value}
@@ -14,5 +14,5 @@ eureka.instance.instance-id=${spring.application.name}:${random.value}
 management.endpoints.web.exposure.include=*
 
 #Admin server location
-#spring.boot.admin.client.url=http://localhost:9080
-spring.boot.admin.client.url=http://54.177.177.158:9089
+spring.boot.admin.client.url=http://localhost:9080
+#spring.boot.admin.client.url=http://54.177.177.158:9089
